# minijinja_playground

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  rendered.html.jinja  tailwind.config.js
src/: lib.rs  main.rs
web/: index.html
web/css/: tailwind.css
