[package]
name = "minijinja-playground"
version = "0.1.0"
authors = ["Josh Taylor"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
web-sys = { version = "0.3.60", features = [
    'Document',
    'Window',
    'Element',
    "HtmlButtonElement",
    "HtmlTextAreaElement",
    "console"
]}
minijinja = { path = "../minijinja/minijinja", features = ["speedups", "preserve_order", "json", "macros", "debug", "internal_debug", "fuel", "unstable_machinery", "deserialization"] }
serde = { version = "1.0", features = ["derive"] }
serde-json-wasm = "0.5.0"
console_error_panic_hook = "0.1.7"

#time = { version = "0.3.17", features = ["wasm-bindgen"], default-features = false }
chrono = { version = "0.4.10", features = ["wasmbind"] }


#[profile.dev]
#codegen-units = 1 # better optimizations
#opt-level = 3
#debug = 1
#split-debuginfo = 'unpacked'

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
#opt-level = 3
opt-level = 3